# cargo-delayedclippy

./: Cargo.toml  README.md  Readme.md
src/: main.rs
